--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EMWI Auto Moto</title>
   </head>
-  <body class="h-full dark:text-gray-400 dark:bg-gray-900">
-    <div id="app"></div>
+  <body class="min-h-screen dark:text-gray-400 dark:bg-gray-900">
+    <div id="app" class="min-h-screen flex flex-col"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
