--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <title>EMWI Auto Moto</title>
   </head>
   <body class="min-h-screen dark:text-gray-400 dark:bg-gray-900">
-    <div id="app" class="min-h-screen flex flex-col"></div>
+    <div id="app" class="min-h-screen max-w-7xl flex flex-col p-4 pb-1 m-auto"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
