--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" class="h-full body-font">
+<html lang="pl" class="h-full body-font">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="EMWI Auto Moto - Importujemy wysokiej jakości motocykle z USA do Polski. Odkryj naszą ofertę motocykli, traktorów ogrodowych oraz części i akcesoriów.">
+    <meta name="keywords" content="motocykle, import, Polska, EMWI Auto Moto, traktory ogrodowe, części, akcesoria">
     <title>EMWI Auto Moto</title>
   </head>
   <body class="min-h-screen dark:text-gray-400 dark:bg-gray-900">
